--- a/02JSandCSSClock/index.html
+++ b/02JSandCSSClock/index.html
@@ -109,8 +109,8 @@
             position: absolute;
             top: 50%;
             transform-origin: 100%;
-            /* transform: rotate(90deg);
-            transition: all 0.05s; */
+            transform: rotate(90deg);
+            transition: all 0.05s;
             transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
         }
 
@@ -143,7 +143,7 @@
         const secondHand = document.querySelectorAll('.second-hand');
         const minuteHand = document.querySelectorAll('.minute-hand');
         const hourHand = document.querySelectorAll('.hour-hand');
-        const areaOrder = { 'taiwan': { order: 0, degree: 90 }, 'london': { order: 2, degree: 240 }, 'tokyo': { order: 1, degree: 120 } }
+        const areaOrder = { 'taiwan': { order: 0, jetLag: 0 }, 'london': { order: 2, jetLag: 5 }, 'tokyo': { order: 1, jetLag: 1 } }
 
         function setDate() {
             // Get Time
@@ -160,14 +160,15 @@
             for (const area in areaOrder) {
                 console.log('Area:', area);
                 const order = areaOrder[area].order;
-                const areaDegree = areaOrder[area].degree;
                 console.log('Order:', order);
-                console.log('Area degree:', areaDegree);
+                // jet lag base on Taiwan
+                const jetLag = areaOrder[area].jetLag;
+                console.log(jetLag);
 
                 // compute rotate degree for all hands
-                const secondDegree = (second / 60) * 360 + areaDegree;
-                const minuteDegree = (minute / 60) * 360 + (second / 60) * 6 + areaDegree;
-                const hourDegree = (hour / 12) * 360 + (minute / 60) * 30 + areaDegree;
+                const secondDegree = (second / 60) * 360 + 90;
+                const minuteDegree = (minute / 60) * 360 + (second / 60) * 6 + 90;
+                const hourDegree = ((hour + jetLag) / 12) * 360 + (minute / 60) * 30 + 90;
                 // rotate all hands
                 secondHand[order].style.transform = `rotate(${secondDegree}deg)`;
                 minuteHand[order].style.transform = `rotate(${minuteDegree}deg)`;
