--- a/03CSSVariables/index.html
+++ b/03CSSVariables/index.html
@@ -17,7 +17,7 @@
     <input id="base" type="color" name="base" value="#ffc600">
 </div>
 <figure>
-    <img alt="picture for controls" src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
+    <img alt="picture for controls" src="./cat.png">
     <figcaption>▲示範圖片</figcaption>
 </figure>
 
